Problems: 1. GET /deliveries - Any user sees all the deliveries. 2. POST /deliveries - Any user can post any delivery under any business. Solutions: 1. Role-based data filtering in backend. Avoiding frontend filtering for data protection. courier: gets all posted delivries within the radius set and all not posted status, whenever the location is. business: gets only the deliveries it posted. 2. Role and business name validation added. Request fields are only copied for dest location and item. Implemented userService for that. now only the business can post a delivery, for itself only.
Next step:
can integrate with frontend and perform wider unit tests
